--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,38 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <style>
-   @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap');
-    </style>
-    <style>
-         @font-face {
-          font-family: 'Open Sans', sans-serif;
-       
-    }
- 
-    body{
-      margin: 0;
-    }
-    </style>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+
+    <meta
+      property="og:image"
+      content="https://3suite-nft-test.infura-ipfs.io/ipfs/QmTKb349gqf8jxSjCSs2VRJmUT6CYnQgexvB4szmEat6fn"
+    />
+    <meta
+      property="og:title"
+      content="3Suite | Coding the Future, Reshaping the Digital Landscape"
+    />
+    <meta
+      property="og:description"
+      content="Welcome to the forefront of digital innovation, where Web3 converges with cutting-edge technology to redefine the possibilities of digital world."
+    />
+    <meta property="og:url" content="https://www.3suite.tech/" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="3Suite | Coding the Future, Reshaping the Digital Landscape"
+    />
+    <meta
+      name="twitter:description"
+      content="Welcome to the forefront of digital innovation, where Web3 converges with cutting-edge technology to redefine the possibilities of digital world."
+    />
+    <meta
+      name="twitter:image"
+      content="https://3suite-nft-test.infura-ipfs.io/ipfs/QmTKb349gqf8jxSjCSs2VRJmUT6CYnQgexvB4szmEat6fn"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,10 +53,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>3Suite</title>
+    <title>3Suite | Coding the Future, Reshaping the Digital Landscape</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebPage",
+        "name": "3Suite | Coding the Future, Reshaping the Digital Landscape",
+        "description": "Welcome to the forefront of digital innovation, where Web3 converges with cutting-edge technology to redefine the possibilities of digital world.",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://3suite-nft-test.infura-ipfs.io/ipfs/QmTKb349gqf8jxSjCSs2VRJmUT6CYnQgexvB4szmEat6fn"
+        }
+      }
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
