--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap");
+    </style>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
